Task/FP-387: UI Fixes (#45)
* FP-387: UI Fix: Truncate (#41)

* FP-387: UI Fix: Truncate

* FP-387: UI Fix: Truncate: Remove unused CSS

* FP-387: UI Fix: Truncate: Improve a comment

* FP-387: UI Fix: Truncate: Reduce complexity

* FP-387: UI Fix: Job Name vs ID (#42)

* FP-387: UI Fix: Column Widths (#44)

* FP-387: UI Fix: Truncate

* FP-387: UI Fix: Truncate: Remove unused CSS

* FP-387: UI Fix: Truncate: Improve a comment

* FP-387: UI Fix: Truncate: Reduce complexity

* FP-387: UI Fix: Col Widths

* FP-387: UI Fix: Tweak Styles

* FP-387: UI Fix: Reduce complexity

* Define table cell width via 100%.
* Delete `_truncate`.
* Use `u-ellipsis1 directly.

* Quick: Remove redundant style

* Quick: Add another comment

* Quick: Fix typo in CSS comment

* FP-387: Fix `noDataText` PropType validation bug

* FP-387: longer name, shorter path, left-hand "…"

* FP-387: Minimal fix for justified `noDataText` bug

And moved a style from `.o-fixed-header-table` to `InfiniteScrollTable`.

* FP-387: Minimal fix for justified `noDataText` bug

And moved a style from `.o-fixed-header-table` to `InfiniteScrollTable`.

--- a/client/src/components/Jobs/Jobs.scss
+++ b/client/src/components/Jobs/Jobs.scss
@@ -1,10 +1,31 @@
-.jobs-view.InfiniteScrollTable {
+/* HACK: FP-103/FP-420: Should import via CSS Modules */
+/* WARNING: This is globally available; do NOT use its styles as such */
+@import '../../styles/trumps/_u-ellipsis.scss';
+
+.jobs-view {
+  /* icon */
   th:nth-child(1),
-  td:nth-child(1) { width: 20%; }
+  td:nth-child(1) { width: 05%; }
+  /* name */
   th:nth-child(2),
-  td:nth-child(2) { width: 50%; }
+  td:nth-child(2) { width: 30%; }
+  /* path */
   th:nth-child(3),
-  td:nth-child(3) { width: 15%; }
+  td:nth-child(3) { width: 30%; }
+  /* date */
   th:nth-child(4),
-  td:nth-child(4) { width: 15%; }
+  td:nth-child(4) { width: 20%; }
+  /* status */
+  th:nth-child(5),
+  td:nth-child(5) { width: 15%; }
+}
+.jobs-view__message {
+  text-align: center;
+}
+
+.job__name,
+.job__path {
+  @extend .u-ellipsis;
+
+  direction: rtl; /* move overflow/ellipsis to left of text */
 }
