--- a/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
+++ b/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
@@ -14,10 +14,6 @@
     color: #707070;
     border-bottom: 1px solid #707070;
 
-    th {
-      padding-right: 1em;
-    }
-
     .-sort-asc, .sort-desc {
       color: #484848;
     }
@@ -53,6 +49,16 @@
         clear: both;
       }
     }
+  }
+  /* Allow `.o-fixed-header-table td` width to apply to common inline elements */
+  /* Allow `.u-ellipsis` usage to have effect on common inline elements */
+  & td > a,
+  & td > span {
+    display: inline-block;
+
+    /* Stretch cell content to fit available space */
+    /* WARNING: Unexpected behavior with child text nodes `<td>…<a>…</a>…</td>` */
+    width: 100%;
   }
 }
 
@@ -91,16 +97,20 @@ Markup:
 Styleguide Objects.FixedHeaderTable
 */
 .o-fixed-header-table {
+  /* RFE: Find a way to make this automatically calculated */
+  /* WARNING: Every consumer must define this value to match their layout */
   --body-height: 100px;
 
   table-layout: fixed;
   border-collapse: collapse;
 }
 
-.o-fixed-header-table thead tr {
+/* Make table rows act like table rows, even though `tbody` has become a block */
+.o-fixed-header-table tr {
   display: flex;
   flex-direction: row;
 }
+/* Allow table body to scroll (which also pins the table head in place) */
 .o-fixed-header-table tbody {
   display: block;
   overflow: auto;
